--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 </body>
 <script src="./js/app/models/Negociacao.js"></script>
 <script src="./js/app/controllers/NegociacaoController.js"></script>
+<script src="./js/app/helpers/DateHelpers.js"></script>
+<script src="./js/app/models/ListaNegociacao.js"></script>
 <script>
     let negociacaoController = new NegociacaoController()
 </script>
