--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button onclick="negociacaoController.importNegoci()" class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
         <button class="btn btn-primary text-center" type="button" onclick="negociacaoController.clearNegocicoes()">
@@ -47,10 +47,11 @@
 <div id='ViewNegociacao'></div>
 
 <script src="./js/app/services/ProxyFactory.js"></script> 
+<script src="./js/app/helpers/DateHelpers.js"></script>
+<script src="./js/app/helpers/Bind.js"></script>
+<script src="./js/app/models/ListaNegociacao.js"></script> 
 <script src="./js/app/models/Negociacao.js"></script>
 <script src="./js/app/controllers/NegociacaoController.js"></script>
-<script src="./js/app/helpers/DateHelpers.js"></script>
-<script src="./js/app/models/ListaNegociacao.js"></script> 
 <script src="./js/app/views/View.js"></script> 
 <script src="./js/app/views/NegociacoesView.js"></script> 
 <script src="./js/app/models/Mensagem.js"></script> 
